--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script defer src="js/script.js"></script>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
-	<body class="bg-rose50">
+	<body class="bg-rose50 relative">
 		<main class="container mx-auto max-w-6xl p-6 font-serif">
 			<h1 class="mb-8 text-4xl font-bold">Deserts</h1>
 			<section id="products" class="mx-auto flex flex-col gap-6 lg:flex-row lg:items-start">
@@ -562,15 +562,33 @@
 				</div>
 				<!-- Cart -->
 				<div class="w-full rounded-lg bg-white p-6 lg:flex-1">
-					<h2 class="text-red mb-5 text-xl font-bold">Your Cart (<span>0</span>)</h2>
-					<div class="flex flex-col items-center gap-4">
+					<h2 class="text-red mb-6 text-2xl font-bold">Your Cart (<span id="totalQty">0</span>)</h2>
+					<!-- Empty cart -->
+					<div class="empty-cart flex flex-col items-center gap-4">
 						<div class="h-[128px] w-[128px]">
 							<img src="img/empty-illustration.png" alt="Empty Cart" class="h-full w-full object-contain object-center" />
 						</div>
 						<p class="text-rose500 text-center text-sm font-semibold">Your added items will appear here</p>
 					</div>
+					<!-- Cart with items -->
+					<div class="cart-items hidden flex-col">
 				</div>
 			</section>
 		</main>
+		<div id="overlay" class="fixed inset-0 bg-gray-900 bg-opacity-50 opacity-0 pointer-events-none transition-opacity duration-300 z-40">
+			<div id="confirmModal" class="p-5 rounded-t-lg bg-white absolute bottom-0 left-0 right-0 z-150 transform translate-y-full duration-500">
+				<div class="flex flex-col mb-8">
+					<img src="/img/carbon_checkmark-outline.png" alt="Checkmark" class="w-[48px] h-[48px] mb-3">
+					<h2 class="text-[44px] leading-[55px] font-bold line text-rose900 mb-2">Order Confirmed</h2>
+					<p class="text-base text-rose500">We hope you enjoy your food!</p>
+				</div>
+				<div class="p-4 bg-rose50 rounded-lg">
+					<!-- TEMPLATE -->
+
+					<!-- TEMPLATE -->
+				</div>
+			</div>
+		</div>
+
 	</body>
 </html>
