Minor UI adjustments

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 					<h2 class="line text-rose900 mb-2 text-[44px] font-bold leading-[55px]">Order Confirmed</h2>
 					<p class="text-rose500 text-base">We hope you enjoy your food!</p>
 				</div>
-				<div id="modalOrderList" class="mb-8 rounded-lg p-4">
+				<div id="modalOrderList" class="bg-rose50 mb-8 rounded-lg p-4">
 					<!-- Order items go here -->
 				</div>
 				<button id="newOrder" class="bg-red text-md flex w-full items-center justify-center rounded-full p-3 text-white">
